----------------------------------------------------------------------
 OmegaT 3.5.3
----------------------------------------------------------------------
  23 Enhancements
   4 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.5.3 vs 3.5.2 update 1

  Implemented requests:  

  - Add sentence case to Shift+F3 case change 
  https://sourceforge.net/p/omegat/feature-requests/1134/

  - Improve glossary matching of terms containing numbers
  https://sourceforge.net/p/omegat/feature-requests/1138/

  - Allow suppressing MT retrieval for translated segments
  https://sourceforge.net/p/omegat/feature-requests/1137/

  - Ctrl-M manual call of MT on translated segments
  https://sourceforge.net/p/omegat/feature-requests/1140/

  - Machine translate only current segment, on demand
  https://sourceforge.net/p/omegat/feature-requests/552/

  - Make URLs in Comments, Notes, Glossary panes clickable
  https://sourceforge.net/p/omegat/feature-requests/1141/

  - Back up preferences when a loading error occurs
  https://sourceforge.net/p/omegat/feature-requests/1142/

  - Set focus to "Search for" field if search returns zero hits
  https://sourceforge.net/p/omegat/feature-requests/1143/

  - Allow disabling unescaping of Unicode literals (\uXXXX) in Java
Resource Bundle filter
  https://sourceforge.net/p/omegat/feature-requests/1144/

  - Lazily load StarDict dictionary contents
  https://sourceforge.net/p/omegat/feature-requests/1148/

  - Improve explanation text in the Search window
  https://sourceforge.net/p/omegat/feature-requests/1116/

  - Automatically replace glossary hits when inserting source text
  https://sourceforge.net/p/omegat/feature-requests/1152/

  - Allow excluding orphan segments from search results
  https://sourceforge.net/p/omegat/feature-requests/1026/

  - Show revision number in version string 
  https://sourceforge.net/p/omegat/feature-requests/1159/

  Other changes:
